...
  @IBOutlet private weak var nameLabel: UILabel!
  @IBOutlet private weak var categoryLabel: UILabel!
  @IBOutlet private weak var priceLabel: UILabel!
  @IBOutlet private weak var oldPriceLabel: UILabel!
  @IBOutlet private weak var quantityLabel: UILabel!
  
  @IBOutlet private weak var addToCartButton: UIButton!
  @IBOutlet private weak var addToWishListButton: UIButton!
  @IBOutlet private weak var removeFromWishListButton: UIButton!
  
  private var delegate: ProductViewCellDelegate?
  private var viewModel: ProductRepresentable?
    
...
